[package]
name = "parachain-template-runtime"
version = "4.0.3-dev"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "LGPL-3.0"
homepage = "https://substrate.io"
edition = "2021"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { version = "18.0.0", default-features = false, optional = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["scale-info", "serde_no_std"] }
hex = { version = "0.4.3", default-features = false }
funty = { version = "2.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
fixed = { version = "1.23.0", default-features = false }
smallvec = { version = "1.11.0", default-features = false }

# Substrate
frame-benchmarking = { version = "29.0.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "29.0.0", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "27.0.0", default-features = false }
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
frame-try-runtime = { version = "0.35.0", default-features = false, optional = true  }
frame-executive = { version = "29.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "29.0.0", default-features = false }
pallet-assets = { version = "30.0.0", default-features = false }
pallet-aura = { version = "28.0.0", default-features = false }
pallet-authorship = { version = "29.0.0", default-features = false }
pallet-session = { version = "29.0.0", default-features = false }
pallet-message-queue = { version = "32.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "17.0.0", default-features = false }
pallet-sudo = { version = "29.0.0", default-features = false }
pallet-timestamp = { version = "28.0.0", default-features = false }
pallet-transaction-payment = { version = "29.0.0", default-features = false }
parachains-common = { version = "8.0.0", default-features = false }
sp-genesis-builder = { version = "0.8.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sp-block-builder = { version = "27.0.0", default-features = false }
sp-consensus-aura = { version = "0.33.0", default-features = false }
sp-core = { version = "29.0.0", default-features = false }
sp-inherents = { version = "27.0.0", default-features = false }
sp-offchain = { version = "27.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-session = { version = "28.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "27.0.0", default-features = false }
sp-version = { version = "30.0.0", default-features = false }

# Polkadot
xcm = { version = "8.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "8.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "8.0.1", package = "staging-xcm-executor", default-features = false }
polkadot-parachain-primitives = { version = "7.0.0", default-features = false }
polkadot-runtime-common = { version = "8.0.0", default-features = false }
pallet-xcm = { version = "8.0.0", default-features = false }

# Cumulus
pallet-collator-selection = { version = "10.0.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "10.0.0", default-features = false }
cumulus-primitives-core = { version = "0.8.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.8.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.8.0", default-features = false }
cumulus-pallet-xcm = { version = "0.8.0", default-features = false }
cumulus-primitives-utility = { version = "0.8.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.8.0", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-aura-ext = { version = "0.8.0", default-features = false }

# Local Dependencies
pallet-parachain-info = { path = "../../../parachain-info", default-features = false }
sygma-basic-feehandler = { path = "../../../basic-fee-handler", default-features = false }
sygma-percentage-feehandler = { path = "../../../percentage-fee-handler", default-features = false }
sygma-traits = { path = "../../../traits", default-features = false }
sygma-bridge = { path = "../../../bridge", default-features = false }
sygma-access-segregator = { path = "../../../access-segregator", default-features = false }
sygma-fee-handler-router = { path = "../../../fee-handler-router", default-features = false }
sygma-runtime-api = { path = "../../../runtime-api", default-features = false }
sygma-bridge-forwarder = { path = "../../../bridge-forwarder", default-features = false }
sygma-xcm-bridge = { path = "../../../xcm-bridge", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-assets/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-message-queue/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"pallet-parachain-info/std",
	"primitive-types/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"sygma-basic-feehandler/std",
	"sygma-percentage-feehandler/std",
	"sygma-traits/std",
	"sygma-bridge/std",
	"sygma-access-segregator/std",
	"sygma-fee-handler-router/std",
	"sygma-runtime-api/std",
	"sygma-bridge-forwarder/std",
	"sygma-xcm-bridge/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sygma-bridge/runtime-benchmarks",
	"sygma-access-segregator/runtime-benchmarks",
	"sygma-basic-feehandler/runtime-benchmarks",
	"sygma-percentage-feehandler/runtime-benchmarks",
	"sygma-fee-handler-router/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
	"sygma-basic-feehandler/try-runtime",
	"sygma-percentage-feehandler/try-runtime",
	"sygma-bridge/try-runtime",
	"sygma-access-segregator/try-runtime",
	"sygma-fee-handler-router/try-runtime",
	"sygma-bridge-forwarder/try-runtime",
	"sygma-xcm-bridge/try-runtime",
]

experimental = [ "pallet-aura/experimental" ]
